tests/compile/super_many_bools.rs
use pack_bools::pack_bools;

#[pack_bools(type = u8)]
struct MyBools {
    b1: bool,
    b2: bool,
    b3: bool,
    b4: bool,
    b5: bool,
    b6: bool,
    b7: bool,
    b8: bool,
    b9: bool,
    b10: bool,
    b11: bool,
    b12: bool,
    b13: bool,
    b14: bool,
    b15: bool,
    b16: bool,
    b17: bool,
    b18: bool,
    b19: bool,
    b20: bool,
    b21: bool,
    b22: bool,
    b23: bool,
    b24: bool,
    b25: bool,
    b26: bool,
    b27: bool,
    b28: bool,
    b29: bool,
    b30: bool,
    b31: bool,
    b32: bool,
    b33: bool,
    b34: bool,
    b35: bool,
    b36: bool,
    b37: bool,
    b38: bool,
    b39: bool,
    b40: bool,
    b41: bool,
    b42: bool,
    b43: bool,
    b44: bool,
    b45: bool,
    b46: bool,
    b47: bool,
    b48: bool,
    b49: bool,
    b50: bool,
    b51: bool,
    b52: bool,
    b53: bool,
    b54: bool,
    b55: bool,
    b56: bool,
    b57: bool,
    b58: bool,
    b59: bool,
    b60: bool,
    b61: bool,
    b62: bool,
    b63: bool,
    b64: bool,
    b65: bool,
    b66: bool,
    b67: bool,
    b68: bool,
    b69: bool,
    b70: bool,
    b71: bool,
    b72: bool,
    b73: bool,
    b74: bool,
    b75: bool,
    b76: bool,
    b77: bool,
    b78: bool,
    b79: bool,
    b80: bool,
    b81: bool,
    b82: bool,
    b83: bool,
    b84: bool,
    b85: bool,
    b86: bool,
    b87: bool,
    b88: bool,
    b89: bool,
    b90: bool,
    b91: bool,
    b92: bool,
    b93: bool,
    b94: bool,
    b95: bool,
    b96: bool,
    b97: bool,
    b98: bool,
    b99: bool,
    b100: bool,
    b101: bool,
    b102: bool,
    b103: bool,
    b104: bool,
    b105: bool,
    b106: bool,
    b107: bool,
    b108: bool,
    b109: bool,
    b110: bool,
    b111: bool,
    b112: bool,
    b113: bool,
    b114: bool,
    b115: bool,
    b116: bool,
    b117: bool,
    b118: bool,
    b119: bool,
    b120: bool,
    b121: bool,
    b122: bool,
    b123: bool,
    b124: bool,
    b125: bool,
    b126: bool,
    b127: bool,
    b128: bool,
    b129: bool,
}

fn main() {}
